@@ -28,19 +28,47 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include <gtk/gtk.h>
 
 class Exec_box;
+class Exec_process;
 					// Called when child is done:
 typedef void (*Exec_done_fun)(int exit_code, Exec_box *box, 
 							gpointer user_data);
+
+/*
+ *	A class for executing a child process and capturing its output in a
+ *	GTK program.
+ */
+class Exec_process
+	{
+public:
+					// Function called when data is read
+					//   from child.  If datalen == 0,
+					//   child is done & exit_code is set.
+	typedef void (*Reader_fun)(char *data, int datalen, int exit_code,
+							gpointer user_data);
+private:
+					// Pipes for talking to child:
+	int child_stdin, child_stdout, child_stderr;
+	int child_pid;			// Child's process ID.
+	gint stdout_tag, stderr_tag;	// GDK tags for getting child's output.
+	Reader_fun reader;		// Called when data read from child.
+	void *reader_data;		// User data passed back.
+public:
+	Exec_process();
+	~Exec_process();
+	void kill_child();		// Kill process.
+	void read_from_child(int id);	// Read and call 'reader'.
+					// Execute.
+	bool exec(const char *file, char *argv[], Reader_fun rfun,
+							void *udata);
+	bool check_child(int& exit_code);	// Is child still running?
+	};
 
 /*
  *	This class can execute a command-line program and display its output.
  */
 class Exec_box
 	{
-					// Pipes for talking to child:
-	int child_stdin, child_stdout, child_stderr;
-	int child_pid;			// Child's process ID.
-	gint stdout_tag, stderr_tag;	// GDK tags for getting child's output.
+	Exec_process *executor;		// Handles child process.
 	GtkText *box;			// Where we show responses.
 	GtkStatusbar *status;		// For showing status.
 	guint status_ctx;		// Context for status.
@@ -50,13 +78,13 @@ public:
 	Exec_box(GtkText *b, GtkStatusbar *s, Exec_done_fun dfun = 0,
 							gpointer udata = 0);
 	~Exec_box();
-	void kill_child();		// Kill process.
 	void show_status(const char *msg);	// Set status bar.
-	bool check_child(int& exit_code);	// Is child still running?
-	void read_from_child(int id);	// Read and display.
+					// Handle data from child.
+	void read_from_child(char *data, int datalen, int exit_code);
 	void add_message(const char *txt);	// Add text to box.
 					// Execute.
 	bool exec(const char *file, char *argv[]);
+	void kill_child();		// End.
 	};
 
 #endif
