@@ -1,3 +1,8 @@
+2002-10-10  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* mapedit/execbox.cc (Exec_process): Split off separate class to
+	handle the plotform-dependend exec'ing.
+
 2002-10-08  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* mapedit/execbox.cc,compile.cc:  Added a 'compile' window for
